# NG-food-notifications

./: Cargo.toml  LICENSE  README.md
src/: index.html  main.rs  notifications.js
static/: index.css  index.js
