[package]
name = "NG-food-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="1.32.0",features = ["full"]}
warp = "0.3.5"
web-push = "0.10.0"
serde={version = "1.0.188"}
serde_json="1.0.107"
log="0.4.20"
pretty_env_logger="0.5.0"
bcrypt="0.15.0"
replitdb = "0.1.3"
async-trait = "0.1.73"

[features]
dev = []